--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/eumakarov/react-native-scratcher"
+    "url": "git+https://github.com/eumakarov/react-native-scratcher.git"
   },
   "keywords": [
     "react-native",
@@ -27,5 +27,8 @@
   "license": "MIT",
   "peerDependencies": {
     "react-native": "0.63.4"
+  },
+  "bugs": {
+    "url": "https://github.com/eumakarov/react-native-scratcher/issues"
   }
 }
