chore: update package file

--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
   },
   "bugs": {
     "url": "https://github.com/eumakarov/react-native-scratcher/issues"
-  }
+  },
+  "types": "./index.d.ts"
 }
